# vm_xml_rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  libvirtd_xml.md  改进.md
.github/workflows/: rust.yml
src/: app.rs  error.rs  main.rs  xml_import.rs
src/model/: blockio_tuning.rs  cpu.rs  cpu_tuning.rs  disk_throttle_group.rs  events.rs  fibre_channel_vmid.rs  general.rs  hypervisor_features.rs  iothreads.rs  key_wrap.rs  launch_security.rs  memory.rs  memory_backing.rs  memory_tuning.rs  mod.rs  numa.rs  numatune.rs  os.rs  performance_monitoring.rs  power_management.rs  resource_partitioning.rs  security_label.rs  smbios.rs  time_keeping.rs  validation.rs  vm_config.rs
src/model/devices/: common.rs  controller.rs  disk.rs  filesystem.rs  graphics_video.rs  hostdev.rs  input_sound_tpm.rs  lease.rs  misc_devices.rs  mod.rs  network.rs  nvram.rs  redirdev.rs  serial_console.rs  smartcard.rs
src/panels/: cpu_panel.rs  devices_panel.rs  general_panel.rs  macros.rs  memory_panel.rs  mod.rs  os_panel.rs  utils.rs
src/panels/advanced/: blockio_tuning_panel.rs  cpu_tuning_panel.rs  disk_throttle_group_panel.rs  events_panel.rs  fibre_channel_vmid_panel.rs  hypervisor_features_panel.rs  iothreads_panel.rs  key_wrap_panel.rs  launch_security_panel.rs  memory_backing_panel.rs  memory_tuning_panel.rs  mod.rs  numa_panel.rs  performance_monitoring_panel.rs  power_management_panel.rs  resource_partitioning_panel.rs  security_label_panel.rs  smbios_panel.rs  (+1 more)
src/xml_gen/: cpu.rs  general.rs  memory.rs  misc.rs  mod.rs  os.rs  tests.rs  tuning.rs
(+17 files in other folders)
