[package]
name = "vm_xml_rs"
version = "0.1.1"
edition = "2021"
description = "VM XML Configuration Generator based on egui"
authors = ["linruohan"]
license = "MIT"

[[bin]]
name = "vm_xml_tool"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize", "serde-types"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
rfd = "0.14"
thiserror = "1.0"

[profile.release]
opt-level = 2
lto = true
